# deno_unsync

./: .gitignore  Cargo.toml  rust-toolchain.toml
.github/workflows/: rust.yml
benches/: my_benchmark.rs
src/: flag.rs  future.rs  futures_unordered.rs  joinset.rs  lib.rs  mpsc.rs  notify.rs  semaphore.rs  split.rs  task.rs  task_queue.rs  waker.rs
src/internal/: mod.rs  parent_waker.rs
src/mpsc/: chunked_queue.rs  mod.rs
src/stream/: mod.rs  vec_futures_unordered.rs
src/sync/: flag.rs  mod.rs  task_queue.rs  value_creator.rs
src/tokio/: mod.rs
